--- a/src/styles/AvailableMeals.module.css
+++ b/src/styles/AvailableMeals.module.css
@@ -4,37 +4,22 @@
   margin: 2rem auto;
   animation: meals-appear 1s ease-out forwards;
 }
-
 .meals ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-.loading {
+.meals__loading {
   text-align: center;
   font-size: 2rem;
   margin: 3rem;
   color: white;
   font-weight: bold;
 }
-
-.error {
+.meals__error {
   text-align: center;
   font-size: 2rem;
   margin: 3rem;
   color: white;
   font-weight: bold;
-}
-
-@keyframes meals-appear {
-  from {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+}/*# sourceMappingURL=AvailableMeals.module.css.map */
