--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,1 +1,55 @@
-@import "variables.css";/*# sourceMappingURL=Cart.module.css.map */
+.cart__items-description {
+  list-style: none;
+  margin: 0;
+  padding: 1rem 0 0 0;
+  max-height: 40rem;
+  overflow: auto;
+}
+.cart__close-button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 0.875rem;
+  background-color: #f05454;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  color: white;
+}
+.cart__close-icon {
+  width: 1rem;
+  height: 1rem;
+  margin: auto 0 auto 0.2rem;
+}
+.cart__items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 0.875rem;
+  opacity: 0.5;
+}
+.cart__total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+.cart__order-button {
+  font: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #4477ce;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+  background-color: #4477ce;
+  color: white;
+  font-weight: bold;
+}/*# sourceMappingURL=Cart.module.css.map */
