--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -1,4 +1,4 @@
-.cart-item {
+.cart__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,44 +6,12 @@
   padding: 1rem 0;
   margin: 1rem 0;
 }
-
-.cart-item h2 {
+.cart__item h2 {
   margin: 0 0 0.5rem 0;
   color: #000;
   font-size: 1.2rem;
 }
-
-.summary {
-  width: 10rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.price {
-  font-weight: bold;
-  color: #f05454;
-}
-
-.amount {
-  border: 1px solid #ccc;
-  padding: 0.25rem 0.75rem;
-  border-radius: 6px;
-  color: #000;
-}
-
-.actions {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (min-width: 768px) {
-  .actions {
-    flex-direction: row;
-  }
-}
-
-.cart-item button {
+.cart__item button {
   font: inherit;
   font-weight: bold;
   font-size: 1.25rem;
@@ -57,3 +25,24 @@
   margin-left: 1rem;
   margin: 0.25rem;
 }
+.cart__summary {
+  width: 10rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cart__item-price {
+  font-weight: bold;
+  color: #f05454;
+}
+.cart__item-amount {
+  font-weight: bold;
+  border: 1px solid #ccc;
+  padding: 0.25rem 0.75rem;
+  border-radius: 6px;
+  color: #000;
+}
+.cart__button-actions {
+  display: flex;
+  flex-direction: column;
+}/*# sourceMappingURL=CartItem.module.css.map */
