--- a/src/styles/CheckoutForm.module.scss
+++ b/src/styles/CheckoutForm.module.scss
@@ -6,20 +6,20 @@
 
 .control {
   margin-bottom: 0.5rem;
-}
 
-.control label {
-  font-weight: bold;
-  margin-bottom: 0.25rem;
-  display: block;
-}
+  label {
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+    display: block;
+  }
 
-.control input {
-  font: inherit;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 20rem;
-  max-width: 100%;
+  input {
+    font: inherit;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 20rem;
+    max-width: 100%;
+  }
 }
 
 .actions {
@@ -38,20 +38,10 @@
   padding: 0.5rem 2rem;
 }
 
-.actions button:hover,
-.actions button:active {
-  background-color: #ffe6dc;
-}
-
 .actions .submit {
   border: 1px solid #5a1a01;
   background-color: #5a1a01;
   color: white;
-}
-
-.actions .submit:hover,
-.actions .submit:active {
-  background-color: #7a2706;
 }
 
 .invalid label {
