--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -11,26 +11,31 @@
   align-items: center;
   padding: 0 10%;
   z-index: 10;
-}
 
-.heading-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 0.3rem;
-}
+  &__logo-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.3rem;
+  }
 
-.main-image {
-  width: 100%;
-  height: 35rem;
-  z-index: 0;
-  overflow: hidden;
-}
+  &__logo {
+    width: 3rem;
+    height: 3rem;
+  }
 
-.main-image img {
-  width: 110%;
-  height: 100%;
-  object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-  opacity: 0.6;
+  &__bg-container {
+    width: 100%;
+    height: 35rem;
+    z-index: 0;
+    overflow: hidden;
+
+    img {
+      width: 110%;
+      height: 100%;
+      object-fit: cover;
+      transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+      opacity: 0.6;
+    }
+  }
 }
