--- a/src/styles/HeaderCartBtn.module.scss
+++ b/src/styles/HeaderCartBtn.module.scss
@@ -1,4 +1,6 @@
-.button {
+@import "./variables.scss";
+
+.cart-button {
   cursor: pointer;
   font: inherit;
   border: none;
@@ -8,23 +10,24 @@
   position: relative;
   padding: 0.5rem;
   background-color: transparent;
-}
 
-.icon {
-  width: 2rem;
-  height: 2rem;
-}
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+  }
 
-.badge {
-  position: absolute;
-  background-color: #f05454;
-  border-radius: 100%;
-  width: 1.35rem;
-  height: 1.35rem;
-  font-size: 14px;
-  top: 0%;
-  right: 0%;
-  display: flex;
-  justify-content: center;
-  font-weight: bold;
+  &__badge {
+    position: absolute;
+    background-color: $primaryColor;
+    border-radius: 100%;
+    width: 1.35rem;
+    height: 1.35rem;
+    font-size: 14px;
+    top: 0%;
+    right: 0%;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    color: $secondaryFontColor;
+  }
 }
