--- a/src/styles/MealItem.module.css
+++ b/src/styles/MealItem.module.css
@@ -5,34 +5,28 @@
   padding: 1rem 0;
   border-bottom: 1px solid #ccc;
 }
-
 .meal h3 {
   margin: 0 0 0.25rem 0;
 }
-
-.description {
+.meal__description {
   font-style: italic;
 }
-
-.price {
+.meal__price {
   margin-top: 0.25rem;
   font-weight: bold;
   color: #f05454;
   font-size: 1.25rem;
 }
-
-.form {
+.meal__form {
   text-align: right;
 }
-
-.form button {
+.meal__form button {
   font: inherit;
-  font-size: 0.875rem;
   cursor: pointer;
-  background-color: #4477ce;
-  border: 1px solid #4477ce;
+  background-color: #8a2b06;
+  border: 1px solid #8a2b06;
   color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
+  padding: 0.25rem 2rem;
+  border-radius: 0.25rem;
   font-weight: bold;
-}
+}/*# sourceMappingURL=MealItem.module.css.map */
