--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -26,15 +26,4 @@
     width: 40rem;
     left: calc(50% - 20rem);
   }
-}
-
-@keyframes slide-down {
-  from {
-    opacity: 0;
-    transform: translateY(-3rem);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+}/*# sourceMappingURL=Modal.module.css.map */
