--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 
+@import "variables";
+
 * {
   box-sizing: border-box;
+  color: $primaryFontColor;
+
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    background-color: $secondaryColor;
+    color: $primaryFontColor;
+  }
 }
 
 html {
@@ -10,5 +31,5 @@ html {
 
 body {
   margin: 0;
-  background-color: #3f3f3f;
+  background-color: $secondaryColor;
 }
