--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 5rem;
   background-color: transparent;
-  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,11 +16,16 @@
     flex-direction: row;
     align-items: center;
     gap: 0.3rem;
+
+    h1 {
+      color: white;
+    }
   }
 
   &__logo {
     width: 3rem;
     height: 3rem;
+    fill: white;
   }
 
   &__bg-container {
@@ -34,8 +38,8 @@
       width: 110%;
       height: 100%;
       object-fit: cover;
-      transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-      opacity: 0.6;
+      transform: rotateZ(-5deg) translateY(-5rem) translateX(-1.5rem);
+      filter: brightness(70%);
     }
   }
 }
