--- a/src/styles/HeaderCartBtn.module.scss
+++ b/src/styles/HeaderCartBtn.module.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "variables";
 
 .cart-button {
   cursor: pointer;
@@ -14,6 +14,7 @@
   &__icon {
     width: 2rem;
     height: 2rem;
+    fill: white;
   }
 
   &__badge {
