--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -1,18 +1,30 @@
-.input {
+.input__container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 0.5rem;
+  background-color: #f5f5f5;
+  padding: 0;
+  border-radius: 45%;
 }
-.input label {
-  font-size: 14px;
-  margin-bottom: 0.25rem;
-  opacity: 0.5;
+.input__container input {
+  width: 100%;
 }
-.input input {
-  width: 3rem;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  font: inherit;
-  padding-left: 0.5rem;
+.input__container input:focus {
+  outline: none;
+}
+.input__button-left {
+  border: none;
+  background-color: #f5f5f5;
+  color: #f8b602;
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 0.5rem 0.3rem 0.5rem 1.25rem;
+  border-radius: 2.875rem 0 0 2.875rem;
+}
+.input__button-right {
+  border: none;
+  background-color: #f5f5f5;
+  color: #f8b602;
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 0.5rem 1.25rem 0.5rem 0.3rem;
+  border-radius: 0 2.875rem 2.875rem 0;
 }/*# sourceMappingURL=Input.module.css.map */
