--- a/src/styles/Input.module.scss
+++ b/src/styles/Input.module.scss
@@ -1,20 +1,38 @@
-.input {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 0.5rem;
+@import "variables";
 
-  label {
-    font-size: 14px;
-    margin-bottom: 0.25rem;
-    opacity: 0.5;
+.input {
+  &__container {
+    display: flex;
+    background-color: $secondaryColor;
+    padding: 0;
+    border-radius: 45%;
+
+    input {
+      width: 100%;
+
+      &:focus {
+        outline: none;
+      }
+    }
   }
 
-  input {
-    width: 3rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font: inherit;
-    padding-left: 0.5rem;
+  &__button-left {
+    border: none;
+    background-color: $secondaryColor;
+    color: $primaryColor;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0.5rem 0.3rem 0.5rem 1.25rem;
+    border-radius: 2.875rem 0 0 2.875rem;
+  }
+
+  &__button-right {
+    border: none;
+    background-color: $secondaryColor;
+    color: $primaryColor;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0.5rem 1.25rem 0.5rem 0.3rem;
+    border-radius: 0 2.875rem 2.875rem 0;
   }
 }
