--- a/src/styles/MealItem.module.scss
+++ b/src/styles/MealItem.module.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .meal {
   display: flex;
   justify-content: space-between;
@@ -7,30 +9,49 @@
 
   h3 {
     margin: 0 0 0.25rem 0;
+    font-weight: semi-bold;
   }
 
   &__description {
     font-style: italic;
+    color: $tertiaryFontColor;
   }
 
   &__price {
     margin-top: 0.25rem;
     font-weight: bold;
-    color: #f05454;
     font-size: 1.25rem;
   }
 
-  &__form {
-    text-align: right;
+  &__symbol {
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: $primaryColor;
+  }
 
-    button {
+  &__form {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 135px;
+
+    &-cart-button {
       font: inherit;
       cursor: pointer;
-      background-color: #8a2b06;
-      border: 1px solid #8a2b06;
-      color: white;
-      padding: 0.25rem 2rem;
-      border-radius: 0.25rem;
+      background-color: $primaryColor;
+      border: none;
+      font-weight: bold;
+      color: $secondaryFontColor;
+      padding: 0.5rem 1.5rem;
+      border-radius: 25px;
+      width: 100%;
+    }
+
+    &-wrong-input {
+      color: rgb(255, 48, 48);
+      font-size: 0.7rem;
       font-weight: bold;
     }
   }
