--- a/src/styles/MealsSummary.module.css
+++ b/src/styles/MealsSummary.module.css
@@ -3,15 +3,22 @@
   max-width: 45rem;
   width: 90%;
   margin: auto;
-  margin-top: -10rem;
+  margin-top: -15rem;
   position: relative;
-  background-color: #383838;
-  color: white;
+  background-color: #f8b602;
   border-radius: 14px;
   padding: 1rem;
-  box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
 }
 .summary h2 {
+  font-size: 3rem;
+  margin: 0;
+  color: white;
+}
+.summary h3 {
   font-size: 2rem;
-  margin-top: 0;
+  margin: 0;
+  color: white;
+}
+.summary p {
+  color: white;
 }/*# sourceMappingURL=MealsSummary.module.css.map */
