--- a/src/styles/MealsSummary.module.scss
+++ b/src/styles/MealsSummary.module.scss
@@ -1,18 +1,29 @@
+@import "variables";
+
 .summary {
   text-align: center;
   max-width: 45rem;
   width: 90%;
   margin: auto;
-  margin-top: -10rem;
+  margin-top: -15rem;
   position: relative;
-  background-color: #383838;
-  color: white;
+  background-color: $primaryColor;
   border-radius: 14px;
   padding: 1rem;
-  box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
 
   h2 {
+    font-size: 3rem;
+    margin: 0;
+    color: white;
+  }
+
+  h3 {
     font-size: 2rem;
-    margin-top: 0;
+    margin: 0;
+    color: white;
+  }
+
+  p {
+    color: white;
   }
 }
