--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-
 * {
   box-sizing: border-box;
+  color: #333;
+  /* Chrome, Safari, Edge, Opera */
+  /* Firefox */
+}
+* input::-webkit-outer-spin-button,
+* input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+* input[type=number] {
+  -moz-appearance: textfield;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  background-color: #f5f5f5;
+  color: #333;
 }
 
 html {
@@ -10,5 +26,5 @@ html {
 
 body {
   margin: 0;
-  background-color: #3f3f3f;
-} /*# sourceMappingURL=globals.css.map */
+  background-color: #f5f5f5;
+}/*# sourceMappingURL=globals.css.map */
