--- a/src/styles/Cart.module.scss
+++ b/src/styles/Cart.module.scss
@@ -1,4 +1,10 @@
+@import "variables";
+
 .cart {
+  &__wrapper {
+    display: flex;
+  }
+
   &__items-description {
     list-style: none;
     margin: 0;
@@ -8,25 +14,27 @@
   }
 
   &__close-button {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 0.875rem;
-    background-color: #f05454;
-    border: none;
+    font: inherit;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    font-weight: bold;
+    background-color: transparent;
+    border: 2px solid $primaryFontColor;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    color: white;
+    margin-top: 2rem;
+    background-color: transparent;
+    color: $primaryFontColor;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 130px;
   }
+
   &__close-icon {
-    width: 1rem;
-    height: 1rem;
-    margin: auto 0 auto 0.2rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.3rem;
+    fill: $primaryFontColor;
   }
 
   &__items {
@@ -35,6 +43,10 @@
     justify-content: space-between;
     font-size: 0.875rem;
     opacity: 0.5;
+  }
+
+  &__summary {
+    margin: 0;
   }
 
   &__total {
@@ -49,13 +61,14 @@
   &__order-button {
     font: inherit;
     cursor: pointer;
-    background-color: transparent;
-    border: 2px solid #4477ce;
+    background-color: $primaryColor;
+    border: 1px solid $primaryColor;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    margin-left: 1rem;
-    background-color: #4477ce;
-    color: white;
+    color: $secondaryFontColor;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    width: 130px;
   }
 }
