--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -10,20 +10,12 @@
 
 .modal {
   position: fixed;
-  top: 20vh;
-  left: 5%;
-  width: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
-  padding: 1rem;
-  border-radius: 14px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  padding: 2rem;
+  border-radius: 1rem;
   z-index: 30;
-  animation: slide-down 300ms ease-out forwards;
+  min-width: 600px;
 }
-
-@media (min-width: 768px) {
-  .modal {
-    width: 40rem;
-    left: calc(50% - 20rem);
-  }
-}/*# sourceMappingURL=Modal.module.css.map */
