--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,52 +1,54 @@
 .cart__wrapper {
   display: flex;
-}
-.cart__items-description {
-  list-style: none;
-  margin: 0;
-  padding: 1rem 0 0 0;
-  max-height: 40rem;
-  overflow: auto;
-}
-.cart__close-button {
-  font: inherit;
-  cursor: pointer;
-  background-color: transparent;
-  border: 2px solid #333;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  margin-top: 2rem;
-  background-color: transparent;
-  color: #333;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-}
-.cart__close-icon {
-  width: 1.25rem;
-  height: 1.25rem;
-  margin-right: 0.3rem;
-  fill: #333;
+  padding: 1rem;
 }
 .cart__items {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  font-size: 0.875rem;
-  opacity: 0.5;
+  width: 100%;
+  padding-left: 0;
+  max-height: 40vh;
+  overflow: auto;
 }
 .cart__summary {
   margin: 0;
+  color: #f8b602;
 }
 .cart__total {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 1rem 0;
+}
+.cart__total-symbol {
+  color: #f8b602;
+}
+.cart__additional {
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: -1rem;
+}
+.cart__additional span {
+  color: #f8b602;
+  font-weight: bold;
+}
+.cart__additional p {
+  font-weight: bold;
+}
+.cart__additional-text {
+  color: rgba(0, 0, 0, 0.5);
+}
+.cart__button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
 }
 .cart__order-button {
   font: inherit;
@@ -60,4 +62,25 @@
   display: flex;
   justify-content: center;
   width: 130px;
+}
+.cart__close-button {
+  font: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #333;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  background-color: transparent;
+  color: #333;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 130px;
+}
+.cart__close-icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.3rem;
+  fill: #333;
 }/*# sourceMappingURL=Cart.module.css.map */
