--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -13,9 +13,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 640px;
+  max-height: 80vh;
   background-color: white;
   padding: 2rem;
-  border-radius: 1rem;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
-  min-width: 600px;
-}
+}/*# sourceMappingURL=Modal.module.css.map */
