--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -1,6 +1,16 @@
+.grid__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 0.75fr;
+  gap: 2rem;
+  width: 60vw;
+  justify-content: space-between;
+}
+
 .cart__wrapper {
   display: flex;
-  padding: 1rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
 }
 .cart__items {
   display: flex;
