--- a/src/styles/Cart.module.scss
+++ b/src/styles/Cart.module.scss
@@ -1,9 +1,19 @@
 @import "variables";
 
+.grid__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 0.75fr;
+  gap: 2rem;
+  width: 60vw;
+  justify-content: space-between;
+}
+
 .cart {
   &__wrapper {
     display: flex;
-    padding: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
   }
 
   &__items {
