--- a/src/styles/EmptyCartContent.module.css
+++ b/src/styles/EmptyCartContent.module.css
@@ -34,6 +34,7 @@
   font-weight: bold;
   display: flex;
   align-items: center;
+  align-self: flex-start;
 }
 .empty-cart__icon {
   width: 1.25rem;
