--- a/src/styles/OrderSentContent.module.css
+++ b/src/styles/OrderSentContent.module.css
@@ -1,1 +1,45 @@
-/*# sourceMappingURL=OrderSentContent.module.css.map */
+.order__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.order__container p {
+  margin: 0;
+}
+.order__container span {
+  color: #f8b602;
+}
+.order__food-icon {
+  width: 6rem;
+  height: 6rem;
+  text-align: center;
+  margin: 0;
+  fill: #f8b602;
+}
+.order__title {
+  font-size: 2rem;
+  margin: 0;
+  text-align: center;
+}
+.order__close-button {
+  font: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #333;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin-top: 2rem;
+  background-color: transparent;
+  color: #333;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
+}
+.order__close-icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.3rem;
+  fill: #333;
+}/*# sourceMappingURL=OrderSentContent.module.css.map */
