--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -38,4 +38,10 @@
      object-fit: cover;
   transform: rotateZ(-5deg) translateY(-5rem) translateX(-1.5rem);
   filter: brightness(70%);
+}
+
+.colored {
+  background-color: #f8b602;
+  transition: background 0.5s ease-in-out;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }/*# sourceMappingURL=Header.module.css.map */
