--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .header {
   position: fixed;
   top: 0;
@@ -42,4 +44,10 @@
       filter: brightness(70%);
     }
   }
+}
+
+.colored {
+  background-color: $primaryColor;
+  transition: background 0.5s ease-in-out;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
