--- a/src/styles/HeaderCartBtn.module.css
+++ b/src/styles/HeaderCartBtn.module.css
@@ -27,4 +27,8 @@
   justify-content: center;
   font-weight: bold;
   color: #fff;
+}
+
+.colored {
+  background-color: #333;
 }/*# sourceMappingURL=HeaderCartBtn.module.css.map */
