--- a/src/styles/MealItem.module.css
+++ b/src/styles/MealItem.module.css
@@ -21,7 +21,7 @@
 .meal__symbol {
   font-size: 1.25rem;
   font-weight: bold;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
 }
 .meal__form {
   display: flex;
@@ -34,7 +34,7 @@
 .meal__form-cart-button {
   font: inherit;
   cursor: pointer;
-  background-color: #f8b602;
+  background-color: rgb(248, 182, 2);
   border: none;
   font-weight: bold;
   color: #fff;
