--- a/src/styles/MealsSummary.module.css
+++ b/src/styles/MealsSummary.module.css
@@ -5,7 +5,7 @@
   margin: auto;
   margin-top: -15rem;
   position: relative;
-  background-color: #f8b602;
+  background-color: rgb(248, 182, 2);
   border-radius: 14px;
   padding: 1rem;
 }
