--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -25,7 +25,7 @@
   justify-self: end;
 }
 .cart__item-price-symbol {
-  color: #f8b602;
+  color: rgb(248, 182, 2);
 }
 .cart__item-amount {
   font-weight: bold;
@@ -42,7 +42,7 @@
 .cart__item-amount-left-button {
   border: none;
   background-color: #f5f5f5;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
   font-size: 1.5rem;
   cursor: pointer;
   padding: 0.3rem 0.3rem 0.3rem 1rem;
@@ -51,7 +51,7 @@
 .cart__item-amount-right-button {
   border: none;
   background-color: #f5f5f5;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
   font-size: 1.5rem;
   cursor: pointer;
   padding: 0.3rem 1rem 0.3rem 0.3rem;
