--- a/src/styles/CheckoutForm.module.css
+++ b/src/styles/CheckoutForm.module.css
@@ -6,7 +6,7 @@
 }
 .checkout__wrapper h2 {
   margin: 0 0 1rem 0;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
 }
 .checkout__form-area {
   display: flex;
@@ -67,8 +67,8 @@
 .checkout__confirm-button {
   font: inherit;
   cursor: pointer;
-  background-color: #f8b602;
-  border: 1px solid #f8b602;
+  background-color: rgb(248, 182, 2);
+  border: 1px solid rgb(248, 182, 2);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   color: #fff;
@@ -81,11 +81,11 @@
   font: inherit;
   cursor: pointer;
   background-color: transparent;
-  border: 2px solid #333;
+  border: 2px solid rgb(51, 51, 51);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   background-color: transparent;
-  color: #333;
+  color: rgb(51, 51, 51);
   font-weight: bold;
   display: flex;
   align-items: center;
