--- a/src/styles/EmptyCartContent.module.css
+++ b/src/styles/EmptyCartContent.module.css
@@ -15,7 +15,7 @@
   margin: 0;
 }
 .empty-cart__emoji span {
-  color: #f8b602;
+  color: rgb(248, 182, 2);
 }
 .empty-cart__text {
   text-align: center;
@@ -25,12 +25,12 @@
   font: inherit;
   cursor: pointer;
   background-color: transparent;
-  border: 2px solid #333;
+  border: 2px solid rgb(51, 51, 51);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   margin-top: 2rem;
   background-color: transparent;
-  color: #333;
+  color: rgb(51, 51, 51);
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -40,5 +40,5 @@
   width: 1.25rem;
   height: 1.25rem;
   margin-right: 0.3rem;
-  fill: #333;
+  fill: rgb(51, 51, 51);
 }/*# sourceMappingURL=EmptyCartContent.module.css.map */
