--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,6 +10,7 @@
   align-items: center;
   padding: 0 10%;
   z-index: 10;
+  transition: background-color 0.2s ease;
 }
 .header__logo-container {
   display: flex;
@@ -41,7 +42,7 @@
 }
 
 .colored {
-  background-color: #f8b602;
-  transition: background 0.5s ease-in-out;
+  background-color: rgb(248, 182, 2);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.2s ease;
 }/*# sourceMappingURL=Header.module.css.map */
