--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -12,6 +12,7 @@
   align-items: center;
   padding: 0 10%;
   z-index: 10;
+  transition: background-color 0.2s ease;
 
   &__logo-container {
     display: flex;
@@ -48,6 +49,6 @@
 
 .colored {
   background-color: $primaryColor;
-  transition: background 0.5s ease-in-out;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.2s ease;
 }
