--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -13,7 +13,7 @@
 .input__button-left {
   border: none;
   background-color: #f5f5f5;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
   font-size: 1.5rem;
   cursor: pointer;
   padding: 0.5rem 0.3rem 0.5rem 1.25rem;
@@ -22,7 +22,7 @@
 .input__button-right {
   border: none;
   background-color: #f5f5f5;
-  color: #f8b602;
+  color: rgb(248, 182, 2);
   font-size: 1.5rem;
   cursor: pointer;
   padding: 0.5rem 1.25rem 0.5rem 0.3rem;
