--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
-$primaryColor: #f8b602;
+$primaryColor: rgb(248, 182, 2);
 $secondaryColor: #f5f5f5;
 
-$primaryFontColor: #333;
+$primaryFontColor: rgb(51, 51, 51);
 $secondaryFontColor: #fff;
 $tertiaryFontColor: rgba(0, 0, 0, 0.5);
