--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 * {
   box-sizing: border-box;
-  color: #333;
+  color: rgb(51, 51, 51);
   /* Chrome, Safari, Edge, Opera */
   /* Firefox */
 }
@@ -17,7 +17,7 @@
   font-weight: bold;
   border: none;
   background-color: #f5f5f5;
-  color: #333;
+  color: rgb(51, 51, 51);
 }
 
 html {
