--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -12,13 +12,20 @@
   justify-content: space-between;
   width: 100%;
 }
-.cart__items {
+.cart__left-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+}
+.cart__items {
+  margin-bottom: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
   padding-left: 0;
-  max-height: 40vh;
+  height: clamp(20vh, auto, 50vh);
   overflow: auto;
 }
 .cart__summary {
@@ -31,7 +38,7 @@
   align-items: center;
   font-weight: bold;
   font-size: 1.2rem;
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
 }
 .cart__total-symbol {
   color: rgb(248, 182, 2);
