--- a/src/styles/CheckoutForm.module.css
+++ b/src/styles/CheckoutForm.module.css
@@ -1,12 +1,18 @@
 .checkout__wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
 .checkout__wrapper h2 {
   margin: 0 0 1rem 0;
   color: rgb(248, 182, 2);
+}
+.checkout__wrapper form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 .checkout__form-area {
   display: flex;
