--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -17,6 +17,7 @@
   flex-direction: row;
   align-items: center;
   gap: 0.3rem;
+  text-decoration: none;
 }
 .header__logo-container h1 {
   color: white;
